@@ -1,33 +1,0 @@
-<?php
-/***************************************************************
- *  Copyright notice
- *
- *  (c) 2007 Michiel Roos <extensions@netcreators.com>
- *  All rights reserved
- *
- *  This script is part of the Typo3 project. The Typo3 project is
- *  free software; you can redistribute it and/or modify
- *  it under the terms of the GNU General Public License as published by
- *  the Free Software Foundation; either version 2 of the License, or
- *  (at your option) any later version.
- *
- *  The GNU General Public License can be found at
- *  http://www.gnu.org/copyleft/gpl.html.
- *
- *  This script is distributed in the hope that it will be useful,
- *  but WITHOUT ANY WARRANTY; without even the implied warranty of
- *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- *  GNU General Public License for more details.
- *
- *  This copyright notice MUST APPEAR in all copies of the script!
- ***************************************************************/
-/**
- * cache cleaner script for the 'nc_staticfilecache' extension.
- *
- */
-
-define('TYPO3_MOD_PATH', '../typo3conf/ext/nc_staticfilecache/cli/pre_4.1/');
-$BACK_PATH='../../../../../typo3/';
-$MCONF['name'] = '_CLI_staticfilecache';
-
-?>
