@@ -5,6 +5,7 @@
 	* Set version to 3.0.0-dev
 	* Cleanup: Added protected/public definitions and set min. requirement to TYPO3 4.2.0
 	* Cleanup: Removed superfluous class for debug output and integrated it to regular class
+	* Cleanup: Removed CLI cleaner for elderly TYPO3 releases (< 4.1)
 
 2008-02-22  Michiel Roos  <michiel@netcreators.com>
 
